--- a/my-app/package.json
+++ b/my-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
     "bootstrap": "^4.5.2",
+    "bootstrap-icons": "^1.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
